--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,29 @@ h1, h2, h3, h4, h5, h6 {
 .space-md { width: 100%; height: 1rem; }
 .space-lg { width: 100%; height: 1.5rem; }
 .content { margin: auto; }
+.pos-rel {position: relative;}
+.pos-abs {position: absolute;}
+.p-1 { padding: 2rem; }
+
+@media(max-width: 600px) {
+  .col-100-sm {
+    width: 100% !important;
+  }
+
+  .text-sm {
+    font-size: 0.8rem;
+  }
+
+  .sm-hidden {
+    display: none;
+  }
+}
+
+@media(min-width: 600px) {
+  .md-hidden {
+    display: none;
+  }
+}
 
 /*
   CUSTOM
@@ -146,6 +169,10 @@ h2 {
 
 .bg-bananas {
   background-image: url("images/bananas.jpg");
+}
+
+.bg-pink {
+  background: #e45c87;
 }
 
 .bg-hex {
@@ -218,6 +245,15 @@ h2 {
   font-size: 2vw;
 }
 
+#company {
+  background: #4bbee6;
+  color: #FFF;
+}
+
+.icon-company {
+  font-size: 3vw;
+}
+
 .team-tile {
   margin: 1vw;
   line-height: 1.2;
@@ -230,6 +266,7 @@ h2 {
   width: 120px;
   height: 120px;
   border: 5px solid #ececec;
+  box-shadow: 0px 6px 15px 0 rgba(0, 0, 0, 0.5);
 }
 
 .team-name {
@@ -281,7 +318,35 @@ a.social-icon {
   color: #777;
 }
 
+.gmaps {
+  box-shadow: 0 0 6px 0 #00000085;
+  border: 10px solid #FFF;
+  border-radius: 100%;
+}
+
 @media(max-width: 500px) {
+
+  .p-1 {
+    padding: 1rem;
+  }
+
+  .col-100-sm {
+    width: 100%;
+  }
+
+  .icon-company {
+    font-size: 12vw;
+  }
+
+  .gmaps {
+    width: 40vw;
+    height: 40vw;
+  }
+
+  .contact-info {
+    position: relative;
+    top: -20px;
+  }
 
   .subtitle {
     font-size: 3vw;
@@ -290,6 +355,10 @@ a.social-icon {
   .team-tile {
     line-height: 1.2;
     font-size: 1rem;
+  }
+
+  .team-title.text-small {
+    font-size: 0.7rem;
   }
 
   .team-pic {
@@ -306,5 +375,17 @@ a.social-icon {
 @media(min-width: 900px) {
   .col-50-lg {
     width: 50%;
+  }
+
+  .col-70-lg {
+    width: 70%;
+  }
+
+  .gmaps {
+    width: 15vw;
+    height: 15vw;
+    position: absolute;
+    right: -6vw;
+    top: -3vw;
   }
 }
